--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>		
 		<div id="block_page">
-            <h1>Jeu de golf.</h1>	
+            <h1>Jeu de golf</h1>	
             <div id='myContainer'></div>
         </div>
     </body>									
